# ML_ops_courses

./: .gitignore  Dockerfile.app  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
config/: config.py
notebooks/: eda.ipynb  modelling.ipynb
src/: config.py  split.py
src/modelling/: main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: app_config.py  main.py
src/web_service/lib/: inference.py  models.py  utils.py
